@@ -41,19 +41,6 @@ public class RoomServiceImpl implements RoomService {
     @Override
     public Response addRoom(RoomDTO roomDTO, MultipartFile imageFile) {
 
-        if (roomDTO.getRoomNumber() == null || roomDTO.getRoomNumber() <= 0) {
-            throw new IllegalArgumentException("Room number must be greater than 0");
-        }
-        if (roomDTO.getPricePerNight() == null || roomDTO.getPricePerNight().compareTo(BigDecimal.ZERO) <= 0) {
-            throw new IllegalArgumentException("Price per night must be greater than 0");
-        }
-        if (roomDTO.getCapacity() == null || roomDTO.getCapacity() <= 0) {
-            throw new IllegalArgumentException("Capacity must be greater than 0");
-        }
-        if (roomDTO.getType() == null) {
-            throw new IllegalArgumentException("Room type is required");
-        }
-
         Room roomToSave = modelMapper.map(roomDTO, Room.class);
 
         if (imageFile != null){
@@ -188,7 +175,7 @@ public class RoomServiceImpl implements RoomService {
     @Override
     public Response searchRoom(String input) {
 
-        if (input == null || input.trim().isEmpty()) {
+        if (input == null || input.isBlank()) {
             throw new IllegalArgumentException("keyword cannot be empty");
         }
 
